@@ -4298,14 +4298,16 @@ a random value. /Ix
 
 /\V\x85\9*+((?2)\3++()2)*:2/
 
-/(((?(R)){0,2}) (?''((?'R')((?'R')))))/dupnames
+/(((?(R)){0,2}) (?'x'((?'R')((?'R')))))/dupnames
 
-/(((?(X)){0,2}) (?''((?'X')((?'X')))))/dupnames
+/(((?(X)){0,2}) (?'x'((?'X')((?'X')))))/dupnames
 
-/(((?(R)){0,2}) (?''((?'X')((?'R')))))/
+/(((?(R)){0,2}) (?'x'((?'X')((?'R')))))/
 
 "(?J)(?'d'(?'d'\g{d}))"
 
 "(?=!((?2)(?))({8(?<=(?1){29}8bbbb\x16\xd\xc6^($(\xa9H4){4}h}?1)B))\x15')"
+
+/A(?'')Z/
 
 # End of testinput2 
